# things-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: gated-blocker-relation-SPEC.md  how-it-works.md  setup.md  tools.md  troubleshooting.md
src/things_mcp/: __init__.py  derivation.py  models.py  reads.py  server.py  writes.py
tests/: conftest.py  test_derivation.py  test_models.py  test_reads_integration.py  test_reads_unit.py  test_server.py  test_writes_mocked.py  test_writes_unit.py
tests/fixtures/: create_fixture.py  things_fixture.sqlite
